# qNoise

./: .env.example  .gitignore  EXPLAINER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
notebooks/: results_analysis.ipynb
quantum_noise_pipeline/: config.py
quantum_noise_pipeline/characterization/: readout_error.py  t1.py  t2.py
quantum_noise_pipeline/compilation/: benchmark.py
quantum_noise_pipeline/dashboard/: app.py
quantum_noise_pipeline/database/: models.py  store.py
quantum_noise_pipeline/scheduler/: runner.py
quantum_noise_pipeline/utils/: ibm_client.py
scripts/: dry_run_hardware.py  generate_dashboard.py  quick_characterize.py  retrieve_benchmark_results.py  retrieve_results.py  run_compilation_benchmark.py  run_daily.py  submit_minimal_test.py  verify_connections.py
tests/: test_characterization.py  test_compilation.py  test_database.py  test_scheduler.py
