[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-noise-pipeline"
version = "0.1.0"
description = "Automated quantum circuit noise characterization and compilation optimization pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lachlan"},
]
dependencies = [
    "qiskit>=2.3,<3.0",
    "qiskit-ibm-runtime>=0.45,<1.0",
    "qiskit-superstaq>=0.5.50",
    "sqlalchemy>=2.0",
    "plotly>=5.18",
    "dash>=2.14",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
include = ["quantum_noise_pipeline*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quantum_noise_pipeline --cov-report=term-missing"
